fixed issue where footer was hidden on mobile device

--- a/launches/css/launches.css
+++ b/launches/css/launches.css
@@ -167,22 +167,6 @@ iframe {
     animation: none;
 }
 
-.youtube-link {
-    margin-bottom: 50px;
-}
-
-.youtube-link a {
-    font-size: 1.05em;
-    padding-left: 25px;
-    color: #f5f5f5;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.youtube-link a:hover {
-    text-decoration: underline;
-}
-
 @media only screen and (max-width: 1024px) {
 /* laptop responsive */
     .section-background h1 {
@@ -203,6 +187,10 @@ iframe {
 
 @media only screen and (max-width: 500px) {
 /* mobile responsive */
+    .mobile {
+        display: block;
+    }    
+
     .desktop-video {
         display: none;
     }
@@ -225,10 +213,6 @@ iframe {
 
     .header-text h2 {
         margin-bottom: 10px;
-    }
-
-    .youtube-link a {
-        text-decoration: underline;
     }
 }
 
